# postman

./: BUILD-LOG.md  CLAUDE.md  SESSION-CHECKPOINT.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
ideation/: mcp_client_ideation_20260405.md  postman_ideation_20260405_010636.md  postman_ideation_20260405_010636_ui_mockup.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: collections.rs  environments.rs  history.rs  http.rs  import_export.rs  mcp.rs  mod.rs  requests.rs
src-tauri/src/db/: collections.rs  environments.rs  history.rs  mcp.rs  mod.rs  requests.rs  schema.rs
src-tauri/src/mcp/: client.rs  http.rs  jsonrpc.rs  mod.rs  stdio.rs
src-tauri/src/models/: collection.rs  environment.rs  history.rs  http.rs  mcp.rs  mod.rs  request.rs
src/components/MainPanel/: MainPanel.module.css  MainPanel.tsx
src/components/Mcp/: JsonSchemaForm.tsx  Mcp.module.css  McpAddServerModal.tsx  McpPanel.tsx  McpSidebar.tsx
src/components/Sidebar/: EnvManager.module.css  EnvManager.tsx  Sidebar.module.css  Sidebar.tsx
src/components/shared/: InfoTip.tsx  (+8 more)
src/hooks/: useKeyboardShortcuts.ts  useSendRequest.ts
src/lib/: codeGenerator.ts  constants.ts  envSubstitute.ts  errorMessages.ts  helpText.ts  httpStatusCodes.ts  tauri.ts  templates.ts
src/stores/: useCollectionStore.ts  useEnvironmentStore.ts  useMcpStore.ts  useRequestStore.ts  useResponseStore.ts  useUIStore.ts
src/styles/: globals.css
src/types/: index.ts
(+14 files in other folders)
