[package]
name = "hiveapi"
version = "0.1.0"
description = "Offline-first API client for air-gapped networks"
authors = ["HiveAPI Team"]
edition = "2021"

[lib]
name = "hiveapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
  "brotli",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
thiserror = "2"
which = "7"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
